fixed overflowing on low-res phones

--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -5,7 +5,7 @@ body {
 .navbar {
 	margin-left: auto;
 	margin-right: auto;
-	width: 80%;
+	width: 85%;
 	backdrop-filter: blur(15px) saturate(100%);
 	-webkit-backdrop-filter: blur(15px) saturate(100%);
 	background-color: rgba(19, 54, 103, 0.25);
